[tool.poetry]
name = "Bitly url shorterer"
version = "0.1.0"
description = ""
authors = ["IDilettant dedenev1985@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
